Fix invalid login messages and stylize view pages

--- a/CiocoholiaCakeShop/Views/Feedback/Index.cshtml
+++ b/CiocoholiaCakeShop/Views/Feedback/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="col-md-6 col-lg-6 offset-lg-3">
         <h2>Feedback</h2>
 
-        <h6> Te rugăm îți spui părerea despre serviciile noastre!</h6>
+        <h6> Please, tell us your oppinion about our services:</h6>
         <div>
             <div asp-validation-summary="ModelOnly"></div>
         </div>
@@ -24,7 +24,7 @@
                 <span asp-validation-for="Content"></span>
             </div>
 
-            <button class="btn btn-primary buy-now-btn">Trimite</button>
+            <button class="btn btn-primary buy-now-btn">Send</button>
 
         </form>
     </div>
