--- a/CiocoholiaCakeShop/Views/Feedback/Submit.cshtml
+++ b/CiocoholiaCakeShop/Views/Feedback/Submit.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Feedback plasat";
+    ViewData["Title"] = "Feedback received";
 }
-    <h2>Feedback plasat</h2>
+    <h2>Feedback received</h2>
 
-<p>Vă mulțumim pentru timpul acordat și vă garantăm că mesajul dvs. va fi luat în seamă! </p>
+<p>Thank you for your time and interest! </p>
+<p>We guarantee that you opinion will be further discussed as we try to do our best to make you better enjoy our services!</p>
