--- a/CiocoholiaCakeShop/Views/Home/Index.cshtml
+++ b/CiocoholiaCakeShop/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 </div>
 <br />
 <div class="weekly-getting">
-    <h3> Avem cele mai bune prăjituri din oraș, doar pentru tine!</h3>
+    <h3> We have the best cakes only for you!</h3>
 </div>
 <br />
 
