--- a/CiocoholiaCakeShop/Views/Management/AddCake.cshtml
+++ b/CiocoholiaCakeShop/Views/Management/AddCake.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Ciocoholia.API.ViewModels.ManageCakeViewModel
 
 @{
-    ViewData["Title"] = "Adaugă produs";
+    ViewData["Title"] = "Add product";
 }
-<h2>Adaugă un produs</h2>
+<h2>Add product</h2>
 <br />
 <div class="row">
     <div class="col-md-6">
@@ -51,9 +51,17 @@
                 <span asp-validation-for="Cake.IsCakeOfTheWeek"></span>
             </div>
             <div class="form-group">
-                <button class="btn buy-now-btn">Salvează</button>
+                <button class="btn buy-now-btn">Save</button>
             </div>
         </form>
     </div>
 </div>
 
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
