--- a/CiocoholiaCakeShop/Views/Management/AllOrders.cshtml
+++ b/CiocoholiaCakeShop/Views/Management/AllOrders.cshtml
@@ -1,4 +1,4 @@
 ﻿@model IEnumerable<CakeShop.API.ViewModels.MyOrderViewModel>
-<h2>Toate comenzile</h2>
+<h2>All orders</h2>
 
 @await Html.PartialAsync("OrderList", Model)
