--- a/CiocoholiaCakeShop/Views/Management/Submit.cshtml
+++ b/CiocoholiaCakeShop/Views/Management/Submit.cshtml
@@ -1,4 +1,4 @@
 ﻿@{
     ViewData["Title"] = "Succes";
 }
-<h2>Acțiunea a fost realizată cu success!</h2>
+<h2>Your action was processed successfully!</h2>
