--- a/CiocoholiaCakeShop/Views/Order/CheckoutComplete.cshtml
+++ b/CiocoholiaCakeShop/Views/Order/CheckoutComplete.cshtml
@@ -1,19 +1,19 @@
 ﻿
 @{
-    ViewData["Title"] = "Comandă plasată";
+    ViewData["Title"] = "Order placed";
 }
-<h2>Comandă plasată</h2>
+<h2>Order placed successfully</h2>
 
-<p>Vă mulțumim pentru alegerea făcută! </p>
-<p> Veți fii contactat de unul dintre colegii noștrii în cel mai scurt posibil!</p>
+<p>Thank you for your order!</p>
+<p>You will be contacted by one of our colleague as soon as possible!</p>
 
 <br />
 <p>
-    Doriți să efectuați altă comandă? 
-    <a href="/">Click aici</a>
+    Do you wish to make another order? 
+    <a href="/">Click here</a>
 </p>
 
 <p>
-    Verificați detalile comenzii plasate
-    <a href="/order/myordercontent">Click aici</a>
+    Check you order details here:
+    <a href="/order/myordercontent">Click here</a>
 </p>
