--- a/CiocoholiaCakeShop/Views/Order/Index.cshtml
+++ b/CiocoholiaCakeShop/Views/Order/Index.cshtml
@@ -37,11 +37,15 @@
                 <span asp-validation-for="City"></span>
             </div>
 
-            <button class="btn btn-primary buy-now-btn">Plasează comanda</button>
+            <button class="btn btn-primary buy-now-btn">Place order</button>
 
         </form>
     </div>
 </div>
 
 
-<br /><br />
+<br />
+<br />
+<br />
+<br />
+<br />
