--- a/CiocoholiaCakeShop/Views/Order/MyOrderContent.cshtml
+++ b/CiocoholiaCakeShop/Views/Order/MyOrderContent.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<CakeShop.API.ViewModels.MyOrderViewModel>
 
-<h2>Comenzile mele</h2>
+<h2>My orders</h2>
 
 @await Html.PartialAsync("OrderList", Model)
