--- a/CiocoholiaCakeShop/Views/Shared/CakeView.cshtml
+++ b/CiocoholiaCakeShop/Views/Shared/CakeView.cshtml
@@ -18,7 +18,7 @@
                   asp-route-id="@Model.Id"
                   method="post">
 
-                <button class="btn btn-primary buy-now-btn float-right">Cumpără acum</button>
+                <button class="btn btn-primary buy-now-btn float-right">Buy now</button>
             </form>
 
         </div>
