--- a/CiocoholiaCakeShop/Views/Shared/OrderList.cshtml
+++ b/CiocoholiaCakeShop/Views/Shared/OrderList.cshtml
@@ -3,7 +3,7 @@
 @if (Model?.Count() <= 0)
 {
     <div>
-        <p>Nu aveți nicio comandă momentan!</p>
+        <p>You have not any order yet!</p>
     </div>
     return;
 }
@@ -11,9 +11,9 @@
 <table class="table table-striped text-center">
     <thead>
         <tr>
-            <th>Adresa de facturare</th>
-            <th>Sumar comandă</th>
-            <th>Total de plată</th>
+            <th>Billing Address</th>
+            <th>Order summary</th>
+            <th>Total</th>
         </tr>
     </thead>
     <tbody>
@@ -69,3 +69,9 @@
 
     </tbody>
 </table>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
