--- a/CiocoholiaCakeShop/Views/Shared/carousel.cshtml
+++ b/CiocoholiaCakeShop/Views/Shared/carousel.cshtml
@@ -20,7 +20,6 @@
             </div>
             <div class="carousel-caption d-none d-md-block">
                 <h5>Chocolate Cake</h5>
-                <p>Yaamy! Chooclate</p>
             </div>
         </div>
         <div class="carousel-item">
@@ -28,8 +27,7 @@
                 <img class="d-block" src="~/img/carousel4.jpg" alt="Second slide">
             </div>
             <div class="carousel-caption d-none d-md-block">
-                <h5>Spacial Cake</h5>
-                <p>Our Special Weekly Cake</p>
+                <h5>Cupcakes</h5>
             </div>
         </div>
         <div class="carousel-item">
@@ -37,8 +35,7 @@
                 <img class="d-block" src="~/img/carousel2.jpg" alt="Third slide">
             </div>
             <div class="carousel-caption d-none d-md-block">
-                <h5>Fruit Cake</h5>
-                <p>Try out our special food cake</p>
+                <h5>Special Cake</h5>
             </div>
         </div>
         <div class="carousel-item">
@@ -47,7 +44,6 @@
             </div>
             <div class="carousel-caption d-none d-md-block">
                 <h5>Fruit Cake</h5>
-                <p>Try out our special food cake</p>
             </div>
         </div>
     </div>
