--- a/CiocoholiaCakeShop/Views/Account/Login.cshtml
+++ b/CiocoholiaCakeShop/Views/Account/Login.cshtml
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-md-6">
         <h2>Autentifică-te în contul tău</h2>
-        <div asp-validation-summary="ModelOnly"></div>
+        <div asp-validation-summary="All"></div>
         <form asp-action="login" asp-controller="account" method="post">
             <div class="form-group">
                 <label asp-for="UserName"></label>
@@ -18,8 +18,5 @@
 
             <button class="btn buy-now-btn">Autentificare</button>
         </form>
-        <div>
-            <a href="Account/Register" class="float-right">Nu ai cont? Crează-ți aici!</a>
-        </div>
     </div>
 </div>
