--- a/CiocoholiaCakeShop/Views/Category/Cake.cshtml
+++ b/CiocoholiaCakeShop/Views/Category/Cake.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<CakeShop.Models.Cake>
 
-<h1>Torturi</h1>
+<h1>Cakes</h1>
 @if (Model.Count() > 0)
 {
     <div class="row">
@@ -12,5 +12,5 @@
 }
 else
 {
-    <p>Ne pare rău, dar nu am găsit niciun tort! </p>
+<p>We are sorry, we couldn't find any cake! &#128546; </p>
 }
