--- a/CiocoholiaCakeShop/Views/Contact/Contact.cshtml
+++ b/CiocoholiaCakeShop/Views/Contact/Contact.cshtml
@@ -1,17 +1,17 @@
 ﻿@{ 
     ViewData["Title"] = "Contact Page";
 }
-<h2>Contactați-ne!</h2>
+<h2>Contactact us!</h2>
 
 <div>
     <div class="float-left">
-        <p>Dacă aveți sugestii sau reclamații, nu ezitați să ne contactați!</p>
+        <p>If tou have any suggestions or complaints, do not hesitate to contact us!</p>
         <h4> Program:</h4>
-        <h6> Luni - Vineri: 9:30 - 18:00 </h6>
-        <h6> Sâmbătă - Duminică: 10:00 - 15:00</h6>
-        <h4> Adresa: </h4>
-        <h6> Strada Mihai Eminescu, număr 11, Sector 1, București</h6>
-        <p>De asemenea, ne găsiți la următorul număr de telefon: <b>0768970023</b>!</p>
+        <h6> Monday - Friday: 9:30 AM - 6:00 PM </h6>
+        <h6> Saturday - Sunday: 10:00 AM - 3:00 PM</h6>
+        <h4> Address: </h4>
+        <h6> Mihai Eminescu Street, no 11, Sector 1, Bucharest</h6>
+        <p>Also, you can contact us by phone: <b>0768970023</b>!</p>
     </div>
     <div class="float-right">
         <img src="~/img/Contact.jpg" draggable="false" class="float-right card" id="boxshadow"/>
