--- a/CiocoholiaCakeShop/Views/Management/EditCake.cshtml
+++ b/CiocoholiaCakeShop/Views/Management/EditCake.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Ciocoholia.API.ViewModels.ManageCakeViewModel
 @{
-    ViewData["Title"] = "Editare produs";
+    ViewData["Title"] = "Edit product";
 }
-<h2>Editează produs</h2>
+<h2>Edit product</h2>
 <br />
 <div class="row">
     <div class="col-md-6">
@@ -50,8 +50,14 @@
                 <span asp-validation-for="Cake.IsCakeOfTheWeek"></span>
             </div>
             <div class="form-group">
-                <button class="btn buy-now-btn">Salvează</button>
+                <button class="btn buy-now-btn">Save</button>
             </div>
         </form>
     </div>
 </div>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
