--- a/CiocoholiaCakeShop/Views/Product/ProductDetail.cshtml
+++ b/CiocoholiaCakeShop/Views/Product/ProductDetail.cshtml
@@ -18,7 +18,7 @@
               asp-route-id="@Model.Id"
               method="post">
 
-            <button class="btn btn-primary buy-now-btn">Adaugă în coș</button>
+            <button class="btn btn-primary buy-now-btn">Add to cart</button>
         </form>
 
     </div>
