Fix ManageCake feature

--- a/CiocoholiaCakeShop/Views/Management/EditCake.cshtml
+++ b/CiocoholiaCakeShop/Views/Management/EditCake.cshtml
@@ -6,7 +6,7 @@
 <br />
 <div class="row">
     <div class="col-md-6">
-        <form asp-controller="management" asp-action="editcakeaction" asp-route-id="Cake.Id" method="post">
+        <form asp-controller="Management" asp-action="EditCakeAction" asp-route-id="Cake.Id" method="post">
             <div asp-validation-summary="ModelOnly"></div>
             <div class="form-group">
                 <label asp-for="Cake.Name"></label>
