--- a/CiocoholiaCakeShop/Views/Management/AllOrders.cshtml
+++ b/CiocoholiaCakeShop/Views/Management/AllOrders.cshtml
@@ -1,4 +1,94 @@
 ﻿@model IEnumerable<CakeShop.API.ViewModels.MyOrderViewModel>
 <h2>All orders</h2>
 
-@await Html.PartialAsync("OrderList", Model)
+@if (Model?.Count() <= 0)
+{
+<div>
+    <p>You have not any order yet!</p>
+</div>
+    return;
+}
+
+<table class="table table-striped text-center">
+    <thead>
+        <tr>
+            <th>Billing Address</th>
+            <th>Order summary</th>
+            <th>Total</th>
+            <th>Order state</th>
+        </tr>
+    </thead>
+    <tbody>
+
+        @foreach (var order in Model)
+        {
+        <tr>
+
+            <td class="text-justify">
+                <div>
+                    @order.OrderPlaceDetails.Name,
+                    @order.OrderPlaceDetails.AddressLine1
+                </div>
+                <div>
+                    @order.OrderPlaceDetails.City
+                </div>
+                <div>@order.OrderPlaceDetails.PhoneNumber</div>
+                <div>@order.OrderPlaceDetails.Email</div>
+                <br />
+                <div>
+                    @order.OrderPlacedTime.Date.ToString("dd/MM/yyyy")
+                </div>
+
+            </td>
+
+
+            <td>
+                <table class="table">
+                    <tbody>
+                        @foreach (var item in order.CakeOrderInfos)
+                        {
+                            <tr>
+                                <td>
+                                    @item.Name
+                                </td>
+                                <td>
+                                    @item.Price lei * @item.Quantity
+
+                                </td>
+                            </tr>
+
+                        }
+                    </tbody>
+
+                </table>
+            </td>
+            <td>
+                @order.OrderTotal
+            </td>
+            <td>
+                <form asp-controller="Management" asp-action="SetOrderState"
+                      asp-route-id="@order.Id"
+                      method="post">
+                    <div asp-validation-summary="ModelOnly"></div>
+                    <div class="form-group">
+                        <select class="custom-select" id="orderState" name="orderState" asp-items="@order.OrderStates">
+                            <option value="@order.OrderState">@order.OrderState</option>
+                        </select><span asp-validation-for="@order.OrderState"></span>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary buy-now-btn">
+                            Save
+                        </button>
+                    </div>
+                </form>
+
+
+            </td>
+        </tr>
+
+        }
+
+    </tbody>
+</table>
+<br />
+<br />
