Add some minor fixex

--- a/CiocoholiaCakeShop/Views/Contact/Contact.cshtml
+++ b/CiocoholiaCakeShop/Views/Contact/Contact.cshtml
@@ -14,6 +14,6 @@
         <p>Also, you can contact us by phone: <b>0768970023</b>!</p>
     </div>
     <div class="float-right">
-        <img src="~/img/Contact.jpg" draggable="false" class="float-right card" id="boxshadow"/>
+        <img src="~/img/prajitura-tiramisu.jpg" draggable="false" class="float-right card" id="boxshadow"/>
     </div>
 </div>
