Fix Ciocoholia.API Unit Tests

--- a/CiocoholiaCakeShop/Views/Home/Index.cshtml
+++ b/CiocoholiaCakeShop/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    @model IEnumerable<CakeShop.Models.Cake>;
+    @model IEnumerable<Ciocoholia.Models.Cake>;
     ViewData["Title"] = "Home Page";
 }
 
