--- a/CiocoholiaCakeShop/Views/Management/ManageCakes.cshtml
+++ b/CiocoholiaCakeShop/Views/Management/ManageCakes.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CakeShop.Models.Cake>
+﻿@model IEnumerable<Ciocoholia.Models.Cake>
 @{
     ViewData["Title"] = "Manage products";
 }
