--- a/CiocoholiaCakeShop/Views/Shared/_Layout.cshtml
+++ b/CiocoholiaCakeShop/Views/Shared/_Layout.cshtml
@@ -24,8 +24,8 @@
                                 Our Products
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" asp-controller="Category" asp-action="Cake">Cakes</a>
-                                <a class="dropdown-item" asp-controller="Category" asp-action="PieceOfCake">Piece of Cakes</a>
+                                <a class="dropdown-item" asp-controller="Category" asp-action="Category" asp-route-category= "Cake">Cakes</a>
+                                <a class="dropdown-item" asp-controller="Category" asp-action="Category" asp-route-category= "PieceOfCake">Piece of Cakes</a>
                             </div>
                         </li>
                         <li class="nav-item">
