--- a/CiocoholiaCakeShop/Views/Category/Category.cshtml
+++ b/CiocoholiaCakeShop/Views/Category/Category.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CakeShop.Models.Cake>
+﻿@model IEnumerable<Ciocoholia.Models.Cake>
 
 <h1>Cakes</h1>
 @if (Model.Count() > 0)
@@ -12,5 +12,5 @@
 }
 else
 {
-<p>We are sorry, we couldn't find any cake! &#128546; </p>
+    <p>We are sorry, we couldn't find any cake! &#128546; </p>
 }
